--- a/k8/celery/celery-deployment.yaml
+++ b/k8/celery/celery-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-celery
+  namespace: wallet-namespace
 spec:
   replicas: 2
   selector:
@@ -15,6 +16,8 @@ spec:
       containers:
       - name: my-celery
         image: engrmarkk/fastapi_kubernetes_celery:1.0
-        env:
-        
-       
+        envFrom:
+        - configMapRef:
+            name: my-configmap
+        - secretRef:
+            name: my-secret
