--- a/k8/redis/redis-service.yaml
+++ b/k8/redis/redis-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-redis-service
+  namespace: wallet-namespace
 spec:
   selector:
     app: my-redis
